# rust-bootcamp

./: .gitignore  .typos.toml  Cargo.toml  README.md  justfile
assets/csv/: random_data.csv
crates/black_hat_rust/: Cargo.toml
crates/black_hat_rust/src/: main.rs
crates/black_hat_rust/src/sha1_cracker/: README.md  mod.rs
crates/black_hat_rust/src/tricoder/: README.md  common_ports.rs  error.rs  mod.rs  model.rs  ports.rs  subdomains.rs
crates/bootcamp_rcli/: Cargo.toml
crates/bootcamp_rcli/src/: deserializer.rs  dto.rs  main.rs  opts.rs  serializer.rs
crates/learn_rust/: Cargo.toml
crates/learn_rust/src/: learn_rust_in_y_minutes.rs  main.rs
crates/testing_ground/: Cargo.toml
crates/testing_ground/src/: main.rs
crates/testing_ground/src/csv2yaml/: mod.rs  test.csv
