[workspace]
members  = ["./crates/*"]
resolver = "2"

[workspace.package]
edition    = "2021"
license    = "MIT"
name       = "rust-bootcamp"
repository = "https://github.com/rustaceans-on-beach/rust-bootcamp"
version    = "0.0.0"

[workspace.dependencies]

[workspace.dev-dependencies]
rusty-hook = "^0.11.2"

[workspace.package.metadata.cargo-shear]
ignored = ["rusty-hook"]
