[package]
edition.workspace    = true
name                 = "black_hat_rust"
repository.workspace = true
version              = "0.0.0"

[dependencies]
anyhow             = "1.0.86"
clap               = { version = "4.5.16", features = ["derive"] }
hex                = "0.4.3"
rayon              = "1.10.0"
reqwest            = { version = "0.12.7", features = ["json", "blocking"] }
serde              = { version = "1.0.208", features = ["derive"] }
sha1               = "0.10.6"
thiserror          = "1.0.63"
trust-dns-resolver = "0.23.2"
