[package]
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
metadata.workspace   = true
name                 = "bootcamp_rcli"
repository.workspace = true
version              = "0.1.0"

[dependencies]
anyhow     = "1.0.86"
clap       = { version = "4.5.16", features = ["derive"] }
csv        = "1.3.0"
serde_json = "1.0.127"
serde_yaml = "0.9.34"
